<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.itachi1706.hypixelstatistics.RevampedDesign.PlayerInfoActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/search" android:title="@string/action_search_title"
        android:orderInCategory="1" android:icon="@drawable/magnify_24"
        app:showAsAction="collapseActionView|ifRoom" app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/view_known_alias" android:title="@string/action_view_known_aliases"
        android:orderInCategory="96" app:showAsAction="never" />
    <item android:id="@+id/view_guild" android:title="@string/action_view_player_guild"
        android:orderInCategory="97" app:showAsAction="never" />
    <item android:id="@+id/view_friends" android:title="@string/action_view_friend_list"
        android:orderInCategory="97" app:showAsAction="never"/>
    <item android:id="@+id/view_debug" android:title="@string/action_view_debug"
        android:orderInCategory="98" app:showAsAction="never" />
</menu>
