<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_refresh_active_boosters" android:title="@string/action_refresh_active_boosters"
        android:orderInCategory="99" app:showAsAction="never" />
    <item android:id="@+id/action_refresh_server_info" android:title="@string/action_refresh_server_info"
        android:orderInCategory="98" app:showAsAction="never"/>
    <item android:id="@+id/action_view_server_motd" android:title="@string/action_view_server_motd"
        android:orderInCategory="97" app:showAsAction="never"/>
</menu>
