<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.itachi1706.hypixelstatistics.DeprecratedClasses.PlayerInfoActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/view_debug" android:title="@string/action_view_debug"
        android:orderInCategory="98" app:showAsAction="never" />
    <item android:id="@+id/use_uuid_instead_of_name" android:title="@string/use_uuid_instead_of_name_text"
        android:orderInCategory="95" app:showAsAction="never" />
    <item android:id="@+id/view_known_alias" android:title="@string/action_view_known_aliases"
        android:orderInCategory="96" app:showAsAction="never" />
    <item android:id="@+id/view_guild" android:title="View Player Guild"
        android:orderInCategory="97" app:showAsAction="never" />
</menu>
