<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guild_btn_search"
        android:id="@+id/btnSearch"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputGuild"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnSearch"
        android:layout_toLeftOf="@+id/btnSearch"
        android:hint="@string/guild_autocomplete_textview_hint"
        android:singleLine="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tbGuild"
        android:textOff="Guild Member"
        android:textOn="Guild Name"
        android:layout_alignBottom="@+id/tvToggleHint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guild_togglehint_string"
        android:id="@+id/tvToggleHint"
        android:layout_below="@+id/btnSearch"
        android:layout_toRightOf="@+id/tbGuild"
        android:layout_toEndOf="@+id/tbGuild" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvGeneral"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tbGuild"
        android:layout_above="@+id/tvMemberHint" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:id="@+id/lvMember"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guild_memberText_title"
        android:id="@+id/tvMemberHint"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/lvMember"/>

</RelativeLayout>
