<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="2dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lv_booster_placeholder_name"
        android:id="@+id/tvPlayerName"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lv_booster_placeholder_status"
        android:id="@+id/tvPlayerStatus"
        android:layout_below="@+id/tvPlayerName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lv_booster_placeholder_time"
        android:id="@+id/tvTimeStatus"
        android:layout_below="@+id/tvPlayerStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ivHead"
        android:layout_alignEnd="@+id/ivHead" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivHead"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription"
        android:scaleType="fitXY"
        android:src="@drawable/draw_default_head" />

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbPlayerHeadProg"
        android:layout_alignTop="@+id/ivHead"
        android:layout_toLeftOf="@+id/ivHead"
        android:layout_toStartOf="@+id/ivHead" />

</RelativeLayout>