<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.itachi1706.hypixelstatistics.DeprecratedClasses.PlayerInfoActivity">

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/PlayersetName"
        android:hint="@string/player_etHint"
        android:singleLine="true"
        android:layout_toStartOf="@+id/PlayersBtnChk"
        android:layout_toLeftOf="@+id/PlayersBtnChk" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_btnchk"
        android:id="@+id/PlayersBtnChk"
        android:layout_alignBottom="@+id/PlayersetName"
        android:layout_alignRight="@+id/players_tvDebug"
        android:layout_alignEnd="@+id/players_tvDebug" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/players_tvDebug"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scrollbars="vertical"
        android:maxLines="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/players_lblResult"
        android:layout_below="@+id/PlayersetName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/PlayersBtnChk"
        android:layout_alignRight="@+id/playersIvPlayerHead"
        android:layout_alignEnd="@+id/playersIvPlayerHead" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player_tvSessionInfo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_session_info_coming_soon"
        android:layout_below="@+id/players_lblResult"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/players_lvGeneral"
        android:layout_below="@+id/player_tvSessionInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/players_tvDebug"
        android:layout_alignRight="@+id/players_tvDebug"
        android:layout_alignEnd="@+id/players_tvDebug"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playersIvPlayerHead"
        android:layout_alignTop="@+id/players_lblResult"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:maxWidth="500dp"
        android:maxHeight="500dp"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PlayerspbHead"
        android:layout_below="@+id/PlayersetName"
        android:layout_alignRight="@+id/playersIvPlayerHead"
        android:layout_alignEnd="@+id/playersIvPlayerHead"
        android:focusableInTouchMode="false"
        android:indeterminate="true"
        android:visibility="gone" />




</RelativeLayout>
